Header and hero creation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
   <header>
-    <div class="logo">Andréa Faria</div>
+    <div class="logo">
+      <img src="assets/logos/andreafaria.svg" alt="Andréa Faria Logo" height="40">
+    </div>
     <nav>
       <ul>
         <li><a href="#clients">Clients</a></li>
@@ -27,12 +29,13 @@
     <div class="overlay"></div>
     <div class="hero-content">
       <h1>Brands that live and breathe.</h1>
-      <p class="subtitle">We craft living, desirable brand experiences through boutique curation, branding, and performance marketing</p>
-      <p class="pt">Marcas que vivem e respiram.</p>
-      <p class="pt-sub">Criamos experiências de marca vivas e desejáveis por meio de curadoria boutique, branding e marketing de performance.</p>
+      <p class="pt">
+        We craft living, desirable brand experiences through boutique curation, branding, and performance marketing
+      </p>
       <div class="hero-buttons">
-        <a href="#about" class="btn-outline">Quem somos</a>
-        <a href="#what" class="btn-filled">Como trabalhamos</a>
+        <a href="#about" class="btn-white">About</a>
+        <span class="btn-divider"></span>
+        <a href="#what" class="btn-purple">What We Make</a>
       </div>
     </div>
   </section>
