--- a/index.html
+++ b/index.html
@@ -291,6 +291,35 @@
       </div>
     </div>
   </section>
+  <section id="our-clients" class="our-clients-section">
+    <h2>Our Clients</h2>
+    <hr class="clients-divider">
+    <p class="clients-description">
+      Brand‐building agency specializing in hospitality, lifestyle and F&amp;B.
+    </p>
+    <div class="clients-logos-grid">
+      <img src="assets/clients-logos/metiers-cafe.svg" alt="Metiers Café Logo">
+      <img src="assets/clients-logos/casa-do-arroz.svg" alt="Casa do Arroz Logo">
+      <img src="assets/clients-logos/frutos.svg" alt="Frutos Logo">
+      <img src="assets/clients-logos/minero-manero.svg" alt="Minero Manero Logo">
+      <img src="assets/clients-logos/com-cafe.svg" alt="Com Café Logo">
+      <img src="assets/clients-logos/lazy-suzy.svg" alt="Lazy Suzy Logo">
+      <img src="assets/clients-logos/loya.svg" alt="Loya Logo">
+      <img src="assets/clients-logos/seta.svg" alt="Seta Logo">
+      <img src="assets/clients-logos/hilton-bangalore.svg" alt="Hilton Bangalore Logo">
+      <img src="assets/clients-logos/sheraton-bangalore.svg" alt="Sheraton Bangalore Logo">
+      <img src="assets/clients-logos/the-campster.svg" alt="The Campster Logo">
+      <img src="assets/clients-logos/clover-asoke.svg" alt="Clover Asoke Thailand Logo">
+      <img src="assets/clients-logos/the-rose-goa.svg" alt="The Rose Goa Logo">
+      <img src="assets/clients-logos/nasi-and-me.svg" alt="Nasi and Me Logo">
+      <img src="assets/clients-logos/byg-brewski.svg" alt="Byg Brewski Logo">
+      <img src="assets/clients-logos/golden-circle.svg" alt="The Golden Circle Brewery Logo">
+      <img src="assets/clients-logos/horizon-bangalore.svg" alt="Horizon Bangalore Logo">
+      <img src="assets/clients-logos/praana.svg" alt="Praana Logo">
+      <img src="assets/clients-logos/angsana-bangalore.svg" alt="Angsana Bangalore Logo">
+      <img src="assets/clients-logos/roxie-bangalore.svg" alt="Roxie Bangalore Logo">
+    </div>
+  </section>
   <section id="contact">...</section>
 
   <script src="js/script.js"></script>
