making hero according to the layout defined

--- a/index.html
+++ b/index.html
@@ -6,21 +6,36 @@
   <title>Andréa Faria Marketing</title>
   <link rel="stylesheet" href="css/style.css" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="top-bar">
+    <div class="top-bar-left">
+      <h5>Pronto para construir uma marca desejada e memorável?</h5>
+    </div>
+    <div class="top-bar-center">
+    </div>
+    <div class="top-bar-rigth">
+      <button class="call-btn" onclick="makeCall()">Vamos Conversar</button></li>
+    </div>
+  </div>
+
   <header>
     <div class="logo">
-      <img src="assets/logos/andreafaria.svg" alt="Andréa Faria Logo" height="40">
+      <img src="assets/logos/Andrea-Faria-Marketing-Logo-Tipo-White.svg" alt="Andréa Faria Logo" height="40">
+    </div>
+    <div>
+      <img src="assets/logos/Andrea-Faria-Marketing-Logo-White.svg" alt="Andréa Faria Marketing - Design - Áudio Visual" height="25">
     </div>
     <nav>
       <ul>
-        <li><a href="#clients">Clients</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#what">What We Make</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><button class="call-btn" onclick="makeCall()">Make a Call</button></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#servicos">O Que Fazemos</a></li>
+        <li><a href="#clientes">Clientes</a></li>
+        <!--li><a href="#blog">AF Notes</a></li-->
+        <!--li><a href="#contato">Contato</a></li-->
       </ul>
     </nav>
   </header>
@@ -28,14 +43,14 @@
   <section class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Brands that live and breathe.</h1>
-      <p class="pt">
-        We craft living, desirable brand experiences through boutique curation, branding, and performance marketing
+      <h1>Transformamos marcas em experiências vivas que inspiram, conectam e convertem.</h1>
+      <p class="description">
+        Há mais de 10 anos unimos branding artesanal, estética refinada e marketing estratégico para transformar a forma como o seu cliente percebe e deseja a sua marca.
       </p>
       <div class="hero-buttons">
-        <a href="#about" class="btn-white">About</a>
+        <a href="#about" class="btn-white">Agendar Reunião</a>
         <span class="btn-divider"></span>
-        <a href="#what" class="btn-purple">What We Make</a>
+        <a href="#what" class="btn-purple">Ver Casos</a>
       </div>
     </div>
   </section>
