--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#servicos">O Que Fazemos</a></li>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#servicos">O que fazemos</a></li>
         <li><a href="#clientes">Clientes</a></li>
         <!--li><a href="#blog">AF Notes</a></li-->
         <!--li><a href="#contato">Contato</a></li-->
@@ -55,257 +55,84 @@
     </div>
   </section>
 
-  <section id="clients" class="clients-section">
-    <h2>Clients</h2>
-    <div class="clients-grid" id="clientsGrid">
-      <!-- 6 primeiros clientes -->
-      <div class="client-card">
-        <img src="assets/clients/metiers-cafe.jpg" alt="Metiers Café">
-        <div class="client-info">
-          <h3>Metiers Café</h3>
-          <p>Cafeteria artesanal com foco em experiências únicas e sabores autênticos.</p>
-        </div>
-      </div>
-      <div class="client-card">
-        <img src="assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz">
-        <div class="client-info">
-          <h3>Casa do Arroz</h3>
-          <p>Especialista em pratos à base de arroz, tradição e inovação no mesmo lugar.</p>
-        </div>
-      </div>
-      <div class="client-card">
-        <img src="assets/clients/frutos.jpg" alt="Frutos">
-        <div class="client-info">
-          <h3>Frutos</h3>
-          <p>Produtos frescos e naturais, direto do produtor para você.</p>
-        </div>
-      </div>
-      <div class="client-card">
-        <img src="assets/clients/minero-manero.jpg" alt="Minero Manero">
-        <div class="client-info">
-          <h3>Minero Manero</h3>
-          <p>Sabores mineiros autênticos em um ambiente acolhedor.</p>
-        </div>
-      </div>
-      <div class="client-card">
-        <img src="assets/clients/com-cafe.jpg" alt="Com Café">
-        <div class="client-info">
-          <h3>Com Café</h3>
-          <p>O melhor do café especial, com atendimento personalizado.</p>
-        </div>
-      </div>
-      <div class="client-card">
-        <img src="assets/clients/lazy-suzy.jpg" alt="Lazy Suzy">
-        <div class="client-info">
-          <h3>Lazy Suzy</h3>
-          <p>Ambiente descontraído para quem ama boa comida e boa companhia.</p>
-        </div>
-      </div>
-      <!-- Os demais clientes ficam ocultos inicialmente -->
-      <div class="client-card hidden">
-        <img src="assets/clients/loya.jpg" alt="Loya">
-        <div class="client-info">
-          <h3>Loya</h3>
-          <p>Gastronomia contemporânea com ingredientes locais.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/seta.jpg" alt="Seta">
-        <div class="client-info">
-          <h3>Seta</h3>
-          <p>Design e inovação para o seu negócio crescer.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/hilton-bangalore.jpg" alt="Hilton Bangalore">
-        <div class="client-info">
-          <h3>Hilton Bangalore</h3>
-          <p>Hotel de luxo com experiências inesquecíveis.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/sheraton-bangalore.jpg" alt="Sheraton Bangalore">
-        <div class="client-info">
-          <h3>Sheraton Bangalore</h3>
-          <p>Conforto e sofisticação no coração de Bangalore.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/the-campster.jpg" alt="The Campster">
-        <div class="client-info">
-          <h3>The Campster</h3>
-          <p>Experiências ao ar livre para aventureiros urbanos.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/clover-asoke.jpg" alt="Clover Asoke Thailand">
-        <div class="client-info">
-          <h3>Clover Asoke Thailand</h3>
-          <p>Hospedagem moderna e confortável em Bangkok.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/the-rose-goa.jpg" alt="The Rose Goa">
-        <div class="client-info">
-          <h3>The Rose Goa</h3>
-          <p>Refúgio charmoso no litoral de Goa.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/nasi-and-me.jpg" alt="Nasi and Me">
-        <div class="client-info">
-          <h3>Nasi and Me</h3>
-          <p>Culinária asiática autêntica e cheia de sabor.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/byg-brewski.jpg" alt="Byg Brewski">
-        <div class="client-info">
-          <h3>Byg Brewski</h3>
-          <p>O maior brewpub da Ásia, referência em cervejas artesanais.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/golden-circle.jpg" alt="The Golden Circle Brewery">
-        <div class="client-info">
-          <h3>The Golden Circle Brewery</h3>
-          <p>Cervejaria premiada com receitas exclusivas.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/horizon-bangalore.jpg" alt="Horizon Bangalore">
-        <div class="client-info">
-          <h3>Horizon Bangalore</h3>
-          <p>Espaço inovador para eventos e negócios.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/praana.jpg" alt="Praana">
-        <div class="client-info">
-          <h3>Praana</h3>
-          <p>Bem-estar e saúde integrados em um só lugar.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/angsana-bangalore.jpg" alt="Angsana Bangalore">
-        <div class="client-info">
-          <h3>Angsana Bangalore</h3>
-          <p>Resort de luxo com experiências únicas.</p>
-        </div>
-      </div>
-      <div class="client-card hidden">
-        <img src="assets/clients/roxie-bangalore.jpg" alt="Roxie Bangalore">
-        <div class="client-info">
-          <h3>Roxie Bangalore</h3>
-          <p>Bar e restaurante com atmosfera vibrante.</p>
-        </div>
-      </div>
+  <section class="cta-hero">
+    <div class="cta-hero-left">
+      <h3>
+        Quando a marca vale mais,
+        o negócio cresce mais.
+      </h3>
+      <a href="#about" class="btn-white">Agendar Reunião</a>
     </div>
-    <button class="show-more-btn" id="showMoreBtn" aria-label="Ver todos os clientes">
-      <span style="font-size:2rem;display:inline-block;transform:translateY(2px);">▼</span>
-    </button>
-    <button class="show-less-btn" id="showLessBtn" aria-label="Mostrar menos clientes">
-      <span style="font-size:2rem;display:inline-block;transform:translateY(2px);">▲</span>
-    </button>
-  </section>
-  <section id="about">...</section>
-  <section id="what" class="what-section">
-    <h2>What We Make</h2>
-    <div class="what-grid">
-      <div class="what-col">
-        <h3>We transform brands into living, desirable experiences.</h3>
-        <p>
-          We create brands with soul and strategy — building identities that speak, breathe, and connect. From brand conception to visual expression, we craft stories that resonate, inspire, and convert.
-        </p>
-      </div>
-      <div class="what-col">
-        <h3>Boutique agency, full spectrum.</h3>
-        <p>
-          We are a boutique agency delivering a full spectrum of services: <br>
-          <strong>brand building, content production, digital media management, photo &amp; video direction, and performance marketing.</strong><br>
-          Everything we do is rooted in aesthetics, precision, and relevance.
-        </p>
-      </div>
-      <div class="what-col">
-        <h3>We build legacies, not just trends.</h3>
-        <p>
-          We don’t just follow trends — we build legacies. Through data-driven creativity and tailored strategies, we elevate hospitality, tourism, and lifestyle brands to global standards.
-        </p>
-      </div>
+    <div class="cta-hero-rigth">
+      <h3>
+        
+      </h3>
     </div>
   </section>
-  <section id="services" class="services-section">
-    <div class="service-item" tabindex="0">
-      <div class="service-header">
-        <span>Branding</span>
-        <span class="service-arrow">+</span>
+
+  <section class="servicos">
+    <h2>O que fazemos</h2>
+    <div class="servicos-row">
+      <div class="servicos-row-left">
+
       </div>
-      <div class="service-details">
-        <ul>
-          <li>Brand Strategy</li>
-          <li>Brand Positioning</li>
-          <li>Concept Development</li>
-          <li>Naming Development</li>
-          <li>Logo Design</li>
-          <li>Graphic Design</li>
-          <li>Brand Identity &amp; Voice</li>
-          <li>Stationery</li>
-          <li>Brandbooks &amp; Guidelines</li>
-        </ul>
+      <div class="servicos-row-rigth">
+        <h5>AUDIOVISUAL</h5>
+        <p>Conteúdos que elevam percepção e geram desejo.</p>
       </div>
     </div>
-    <div class="service-item" tabindex="0">
-      <div class="service-header">
-        <span>Photography, Video &amp; Film</span>
-        <span class="service-arrow">+</span>
+
+    <div class="servicos-row">
+      <div class="servicos-row-left">
+        <h5>CRIAÇÃO DE MARCA</h5>
+        <p>Identidades que diferenciam, posicionam e marcam.</p>
       </div>
-      <div class="service-details">
-        <ul>
-          <li>Editorial &amp; Lifestyle Photoshoots</li>
-          <li>Food &amp; Beverage Styling</li>
-          <li>Brand Films &amp; Documentaries</li>
-          <li>Social Media Videos Content</li>
-          <li>Brand Ambassador &amp; Modeling</li>
-        </ul>
+      <div class="servicos-row-rigth">
+
       </div>
     </div>
-    <div class="service-item" tabindex="0">
-      <div class="service-header">
-        <span>Social Media</span>
-        <span class="service-arrow">+</span>
+
+    <div class="servicos-row">
+      <div class="servicos-row-left">
+
       </div>
-      <div class="service-details">
-        <div class="service-socials">
-          Instagram, YouTube, FB, TikTok, LinkedIn, Google+, Threads
-        </div>
-        <ul>
-          <li>Content Strategy</li>
-          <li>Social Media Management</li>
-          <li>Influencer &amp; UGC Partnerships</li>
-          <li>Content Creation</li>
-        </ul>
+      <div class="servicos-row-rigth">
+        <h5>WEBSITE</h5>
+        <p>Sites que impressionam, convertem e fortalecem a presença digital.</p>
       </div>
     </div>
-    <div class="service-item" tabindex="0">
-      <div class="service-header">
-        <span>Brand Marketing &amp; Performance</span>
-        <span class="service-arrow">+</span>
+
+    <div class="servicos-row">
+      <div class="servicos-row-left">
+        <h5>SOCIAL MEDIA</h5>
+        <p>Estratégias que atraem, engajam e constroem autoridade.</p>
       </div>
-      <div class="service-details">
-        <ul>
-          <li>Marketing Strategy (1:1)</li>
-          <li>Brand Launch</li>
-          <li>Customer Experience Design</li>
-          <li>Campaigns &amp; Marketing Actions</li>
-          <li>Email Campaigns</li>
-          <li>PR</li>
-          <li>Copywriting &amp; Crafted Storytelling</li>
-          <li>Web Design &amp; Landing Pages (campaign‐based)</li>
-          <li>Front‐end Development (campaign assets)</li>
-        </ul>
+      <div class="servicos-row-rigth">
+
       </div>
     </div>
+
+    <div class="servicos-row">
+      <div class="servicos-row-left">
+
+      </div>
+      <div class="servicos-row-rigth">
+        <h5>MARKETING DE PERFORMANCE</h5>
+        <p>Campanhas que alcançam as pessoas certas e geram rentabilidade.</p>
+      </div>
+    </div>
+    
+    <div class="servicos-row">
+      <div class="servicos-row-left">
+        <h5>CONSULTORIA DE MARKETING & NEGÓCIOS</h5>
+        <p>Direção estratégica para crescer com clareza e consistência.</p>
+      </div>
+      <div class="servicos-row-rigth">
+      </div>
+    </div>
+
   </section>
+
   <section id="our-clients" class="our-clients-section">
     <h2>Our Clients</h2>
     <hr class="clients-divider">
@@ -335,7 +162,6 @@
       <img src="assets/clients-logos/roxie-bangalore.svg" alt="Roxie Bangalore Logo">
     </div>
   </section>
-  <section id="contact">...</section>
 
   <script src="js/script.js"></script>
 </body>
