--- a/index.html
+++ b/index.html
@@ -148,67 +148,165 @@
 
       <div class="clients-carousel" aria-hidden="false">
         <div class="clients-track clients-track-1" aria-hidden="false">
-          <img src="assets/clients-logos/metiers-cafe.svg" alt="Metiers Café Logo">
-          <img src="assets/clients-logos/casa-do-arroz.svg" alt="Casa do Arroz Logo">
-          <img src="assets/clients-logos/frutos.svg" alt="Frutos Logo">
-          <img src="assets/clients-logos/com-cafe.svg" alt="Com Café Logo">
-          <img src="assets/clients-logos/lazy-suzy.svg" alt="Lazy Suzy Logo">
-          <img src="assets/clients-logos/loya.svg" alt="Loya Logo">
-          <img src="assets/clients-logos/seta.svg" alt="Seta Logo">
-          <img src="assets/clients-logos/hilton-bangalore.svg" alt="Hilton Bangalore Logo">
-          <img src="assets/clients-logos/sheraton-bangalore.svg" alt="Sheraton Bangalore Logo">
+          <div class="client-logo-container">
+            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/loya.jpg" alt="Loya Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/seta.jpg" alt="Seta Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/hilton-bangalore.jpg" alt="Hilton Bangalore Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/sheraton-bangalore.jpg" alt="Sheraton Bangalore Logo">
+          </div>
           <!-- duplicated for seamless loop -->
-          <img src="assets/clients-logos/metiers-cafe.svg" alt="Metiers Café Logo">
-          <img src="assets/clients-logos/casa-do-arroz.svg" alt="Casa do Arroz Logo">
-          <img src="assets/clients-logos/frutos.svg" alt="Frutos Logo">
-          <img src="assets/clients-logos/com-cafe.svg" alt="Com Café Logo">
-          <img src="assets/clients-logos/lazy-suzy.svg" alt="Lazy Suzy Logo">
-          <img src="assets/clients-logos/loya.svg" alt="Loya Logo">
-          <img src="assets/clients-logos/seta.svg" alt="Seta Logo">
-          <img src="assets/clients-logos/hilton-bangalore.svg" alt="Hilton Bangalore Logo">
-          <img src="assets/clients-logos/sheraton-bangalore.svg" alt="Sheraton Bangalore Logo">
+          <div class="client-logo-container">
+            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/loya.jpg" alt="Loya Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/seta.jpg" alt="Seta Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/hilton-bangalore.jpg" alt="Hilton Bangalore Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/sheraton-bangalore.jpg" alt="Sheraton Bangalore Logo">
+          </div>
         </div>
 
         <div class="clients-track clients-track-2" aria-hidden="false">
-          <img src="assets/clients-logos/the-campster.svg" alt="The Campster Logo">
-          <img src="assets/clients-logos/clover-asoke.svg" alt="Clover Asoke Logo">
-          <img src="assets/clients-logos/the-rose-goa.svg" alt="The Rose Goa Logo">
-          <img src="assets/clients-logos/nasi-and-me.svg" alt="Nasi and Me Logo">
-          <img src="assets/clients-logos/marriott.svg" alt="Marriott Logo">
-          <img src="assets/clients-logos/byg-brewski.svg" alt="Byg Brewski Logo">
-          <img src="assets/clients-logos/golden-circle.svg" alt="Golden Circle Logo">
-          <img src="assets/clients-logos/horizon-bangalore.svg" alt="Horizon Bangalore Logo">
-          <img src="assets/clients-logos/praana.svg" alt="Praana Logo">
+          <div class="client-logo-container">
+            <img src="./assets/clients/the-campster.jpg" alt="The Campster Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/clover-asoke.jpg" alt="Clover Asoke Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/the-rose-goa.jpg" alt="The Rose Goa Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/nasi-and-me.jpg" alt="Nasi and Me Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/byg-brewski.jpg" alt="Byg Brewski Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/golden-circle.jpg" alt="Golden Circle Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/horizon-bangalore.jpg" alt="Horizon Bangalore Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/angsana-bangalore.jpg" alt="Angsana Bangalore Logo">
+          </div>
           <!-- duplicated for seamless loop -->
-          <img src="assets/clients-logos/the-campster.svg" alt="The Campster Logo">
-          <img src="assets/clients-logos/clover-asoke.svg" alt="Clover Asoke Logo">
-          <img src="assets/clients-logos/the-rose-goa.svg" alt="The Rose Goa Logo">
-          <img src="assets/clients-logos/nasi-and-me.svg" alt="Nasi and Me Logo">
-          <img src="assets/clients-logos/marriott.svg" alt="Marriott Logo">
-          <img src="assets/clients-logos/byg-brewski.svg" alt="Byg Brewski Logo">
-          <img src="assets/clients-logos/golden-circle.svg" alt="Golden Circle Logo">
-          <img src="assets/clients-logos/horizon-bangalore.svg" alt="Horizon Bangalore Logo">
-          <img src="assets/clients-logos/praana.svg" alt="Praana Logo">
+          <div class="client-logo-container">
+            <img src="./assets/clients/the-campster.jpg" alt="The Campster Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/clover-asoke.jpg" alt="Clover Asoke Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/the-rose-goa.jpg" alt="The Rose Goa Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/nasi-and-me.jpg" alt="Nasi and Me Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/byg-brewski.jpg" alt="Byg Brewski Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/golden-circle.jpg" alt="Golden Circle Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/horizon-bangalore.jpg" alt="Horizon Bangalore Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/angsana-bangalore.jpg" alt="Angsana Bangalore Logo">
+          </div>
         </div>
 
         <div class="clients-track clients-track-3" aria-hidden="false">
-          <img src="assets/clients-logos/angsana-bangalore.svg" alt="Angsana Logo">
-          <img src="assets/clients-logos/roxie-bangalore.svg" alt="Roxie Logo">
-          <img src="assets/clients-logos/metiers-cafe.svg" alt="Metiers Café Logo">
-          <img src="assets/clients-logos/casa-do-arroz.svg" alt="Casa do Arroz Logo">
-          <img src="assets/clients-logos/frutos.svg" alt="Frutos Logo">
-          <img src="assets/clients-logos/com-cafe.svg" alt="Com Café Logo">
-          <img src="assets/clients-logos/lazy-suzy.svg" alt="Lazy Suzy Logo">
-          <img src="assets/clients-logos/loya.svg" alt="Loya Logo">
+          <div class="client-logo-container">
+            <img src="./assets/clients/roxie-bangalore.jpg" alt="Roxie Bangalore Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/loya.jpg" alt="Loya Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/seta.jpg" alt="Seta Logo">
+          </div>
           <!-- duplicated for seamless loop -->
-          <img src="assets/clients-logos/angsana-bangalore.svg" alt="Angsana Logo">
-          <img src="assets/clients-logos/roxie-bangalore.svg" alt="Roxie Logo">
-          <img src="assets/clients-logos/metiers-cafe.svg" alt="Metiers Café Logo">
-          <img src="assets/clients-logos/casa-do-arroz.svg" alt="Casa do Arroz Logo">
-          <img src="assets/clients-logos/frutos.svg" alt="Frutos Logo">
-          <img src="assets/clients-logos/com-cafe.svg" alt="Com Café Logo">
-          <img src="assets/clients-logos/lazy-suzy.svg" alt="Lazy Suzy Logo">
-          <img src="assets/clients-logos/loya.svg" alt="Loya Logo">
+          <div class="client-logo-container">
+            <img src="./assets/clients/roxie-bangalore.jpg" alt="Roxie Bangalore Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/loya.jpg" alt="Loya Logo">
+          </div>
+          <div class="client-logo-container">
+            <img src="./assets/clients/seta.jpg" alt="Seta Logo">
+          </div>
         </div>
       </div>
     </div>
