--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
   <div class="top-bar">
     <div class="top-bar-left">
-      <img class="top-bar-mini-logo" src="./assets/logos/Andrea-Faria-Marketing-Logo-White.svg" alt="Andréa Faria"
+      <img class="top-bar-mini-logo fade-toggle hidden desktop" src="./assets/logos/Andrea-Faria-Marketing-Logo-White.svg" alt="Andréa Faria"
         aria-hidden="true">
       <h5>Pronto para construir uma marca desejada e memorável?</h5>
     </div>
     <div class="top-bar-right">
-      <button class="top-bar-hamburger" aria-label="Open menu" aria-expanded="false" aria-controls="mobile-menu">
-        <span class="hamburger" aria-hidden="true"></span>
+      <button class="top-bar-hamburger fade-toggle hidden" aria-label="Open menu" aria-expanded="false" aria-controls="mobile-menu">
+        <span class="hamburger"></span>
       </button>
       <a href="#about" class="btn btn-white desktop">Vamos Conversar</a>
     </div>
@@ -51,9 +51,11 @@
   <section class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Transformamos marcas em experiências vivas que inspiram, conectam e convertem.</h1>
+      <h1 class="desktop">Transformamos marcas em experiências vivas que inspiram, conectam e convertem.</h1>
+      <h1 class="mobile">Transformamos sua marca!</h1>
       <p class="description">
-        Há mais de 10 anos unimos branding artesanal, estética refinada e marketing estratégico para transformar a forma
+        Há mais de 10 anos unimos branding artesanal, estética refinada e marketing estratégico. <br><br> Nós
+        transformar a forma
         como o seu cliente percebe e deseja a sua marca.
       </p>
       <div class="hero-buttons">
@@ -66,7 +68,7 @@
 
   <section class="cta-hero">
     <h1>
-      Quando a marca vale mais,
+      Quando a marca vale mais, <br>
       o negócio cresce mais.
     </h1>
     <a href="#about" class="btn btn-white">Agendar Reunião</a>
@@ -136,6 +138,7 @@
     </div>
 
     <div class="servicos-row mobile">
+      <hr>
       <div class="servicos-row-left">
         <h5>AUDIOVISUAL</h5>
         <p>Conteúdos que elevam percepção e geram desejo.</p>
@@ -146,6 +149,7 @@
     </div>
 
     <div class="servicos-row mobile">
+      <hr>
       <div class="servicos-row-left">
         <h5>CRIAÇÃO DE MARCA</h5>
         <p>Identidades que diferenciam, posicionam e marcam.</p>
@@ -156,6 +160,7 @@
     </div>
 
     <div class="servicos-row mobile">
+      <hr>
       <div class="servicos-row-left">
         <h5>WEBSITE</h5>
         <p>Sites que impressionam, convertem e fortalecem a presença digital.</p>
@@ -166,6 +171,7 @@
     </div>
 
     <div class="servicos-row mobile">
+      <hr>
       <div class="servicos-row-left">
         <h5>SOCIAL MEDIA</h5>
         <p>Estratégias que atraem, engajam e constroem autoridade.</p>
@@ -176,6 +182,7 @@
     </div>
 
     <div class="servicos-row mobile">
+      <hr>
       <div class="servicos-row-left">
         <h5>MARKETING DE PERFORMANCE</h5>
         <p>Campanhas que alcançam as pessoas certas e geram rentabilidade.</p>
@@ -186,6 +193,7 @@
     </div>
 
     <div class="servicos-row mobile">
+      <hr>
       <div class="servicos-row-left">
         <h5>CONSULTORIA DE MARKETING & NEGÓCIOS</h5>
         <p>Direção estratégica para crescer com clareza e consistência.</p>
@@ -211,7 +219,8 @@
   <section id="our-clients" class="our-clients-section">
     <div class="our-clients-container">
       <h5>Our Clients</h5>
-      <h2>Escolhida por marcas que valorizam experiência, estética e estratégia.</h2>
+      <h2 class="desktop">Escolhida por marcas que valorizam experiência, estética e estratégia.</h2>
+      <h2 class="mobile">Marcas que valorizam experiência, estética e estratégia.</h2>
       <h4>Experiência com marcas ao redor do mundo</h4>
 
       <div class="clients-carousel" aria-hidden="false">
@@ -380,8 +389,9 @@
     </div>
 
     <div class="our-clients-footer">
-      <h3>De marcas globais a negócios autorais, nosso trabalho começa pelo mesmo ponto: aumentar valor, visibilidade e
-        desejo.</h3>
+      <h3>De marcas globais a negócios autorais. <br><br> Nosso trabalho começa pelo mesmo ponto: <strong>aumentar
+          valor, visibilidade e
+          desejo.</strong></h3>
       <a href="#about" class="btn btn-dark-purple">Vamos Conversar</a>
     </div>
   </section>
