some final changes for layout

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
       <a href="#about" class="btn btn-white desktop">Vamos Conversar</a>
     </div>
   </div>
+  <div class="top-bar-bottom hidden">
+    <nav>
+      <ul>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#servicos">O que fazemos</a></li>
+        <li><a href="#clientes">Clientes</a></li>
+        <!--li><a href="#blog">AF Notes</a></li-->
+        <!--li><a href="#contato">Contato</a></li-->
+      </ul>
+    </nav>
+  </div>
 
   <header class="desktop">
     <div class="logo">
