some final changes for layout

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
   </div>
   <div class="top-bar-bottom hidden">
+    <hr class="mobile">
     <nav>
       <ul>
         <li><a href="#hero">Home</a></li>
